--- a/midterns.table.html
+++ b/midterns.table.html
@@ -1,24 +1,20 @@
-<<!DOCTYPE html>
+</html><!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="JAMESALLEN CASUGA">
-  <meta name="description" content="HTML Tables A to G layout">
+  <meta name="author" content="james allen casuga">
+  <meta name="description" content="HTML Tables in a Table">
   <title>Tables A to G</title>
 </head>
 <body>
 <center>
-  <h2>Tables A to G</h2>
-
-
-  <!-- Row 1: Table A, Table B, Table C -->
-  <table border="1" cellpadding="10" cellspacing="10" width="90%">
+  <h2>HTML Tables from A to G</h2>
+  <table border="1" cellpadding="15" cellspacing="15" width="90%">
     <tr>
-      <!-- TABLE A -->
       <td align="center">
         <b>Table A</b><br><br>
-        <table border="1" cellpadding="10" cellspacing="3">
+        <table border="5" cellpadding="15" cellspacing="5">
           <tr>
             <td>A</td>
             <td>B</td>
@@ -31,38 +27,27 @@
           </tr>
         </table>
       </td>
-
-
-      <!-- TABLE B -->
       <td align="center">
         <b>Table B</b><br><br>
-        <table border="1" cellpadding="10" cellspacing="3">
+        <table border="5" cellpadding="15" cellspacing="5">
           <tr><td>A</td><td>D</td></tr>
           <tr><td>B</td><td>E</td></tr>
           <tr><td>C</td><td>F</td></tr>
         </table>
       </td>
-
-
-      <!-- TABLE C -->
-      <td align="center"
+      <td align="center">
         <b>Table C</b><br><br>
-        <table border="1" cellpadding="10" cellspacing="3">
-         
-            <td><colspan="3>"title goes here</td>
+        <table border="5" cellpadding="15" cellspacing="5">
+            <td colspan="3">Title goes here</td>
           <tr><td>A</td><td>C</td><td>E</td></tr>
           <tr><td>B</td><td>D</td><td>F</td></tr>
         </table>
       </td>
     </tr>
-
-
-    <!-- Row 2: Table D, Table E -->
     <tr>
-      <!-- TABLE D -->
       <td align="center">
         <b>Table D</b><br><br>
-        <table border="1" cellpadding="10" cellspacing="3">
+        <table border="3" cellpadding="15" cellspacing="3">
           <tr>
             <td rowspan="3">Title goes here</td>
             <td>A</td><td>D</td>
@@ -71,29 +56,29 @@
           <tr><td>C</td><td>F</td></tr>
         </table>
       </td>
-
-
-      <!-- TABLE E -->
       <td align="center" colspan="2">
         <b>Table E</b><br><br>
-        <table border="1" cellpadding="10" cellspacing="3">
+        <table border="1" cellpadding="30" cellspacing="3">
+            <tr><td rowspan="4">Title goes here</td></tr>
           <tr><td>A</td><td>D</td></tr>
           <tr><td>B</td><td>E</td></tr>
           <tr><td>C</td><td>F</td></tr>
-          <tr><td colspan="2">Title goes here</td></tr>
         </table>
       </td>
     </tr>
 
 
-    <!-- Row 3: Table F, Table G -->
+
+
     <tr>
-      <!-- TABLE F -->
-      <td align="center">
+
+
+     
+      <td align="center" valign="top">
         <b>Table F</b><br><br>
-        <table border="1" cellpadding="10" cellspacing="3">
+        <table border="1" cellpadding="15" cellspacing="20">
           <tr>
-            <td rowspan="3">Title goes here</td>
+            <td rowspan="3"><b>Title<br>goes<br>here</b></td>
             <td>A</td><td>D</td>
           </tr>
           <tr><td>B</td><td>E</td></tr>
@@ -102,25 +87,33 @@
       </td>
 
 
-      <!-- TABLE G -->
       <td align="center" colspan="2">
         <b>Table G</b><br><br>
-        <table border="1" cellpadding="10" cellspacing="3">
+        <table border="1" cellpadding="15" cellspacing="5">
           <tr>
             <td colspan="3">Title goes here</td>
             <td>A</td><td>B</td>
           </tr>
           <tr>
-            <td>C</td><td>D</td><td>E</td>
-            <td>F</td><td>G</td>
+            <td rowspan="3">C</td>
+            <td>D</td>
+            <td>E</td>
+            <td>F</td>
+            <td>G</td>
           </tr>
           <tr>
-            <td>H</td><td>I</td><td>J</td>
-            <td>K</td><td>L</td>
+            <td>H</td>
+            <td colspan="2" align="center">I</td><td rowspan="2">J</td>
+            </tr>
+
+
+            <td>K</td>
+            <td>L</td>
+            <td>M</td>
           </tr>
           <tr>
-            <td>M</td><td>N</td><td>O</td>
-            <td>P</td><td>Q</td>
+            <td>N</td>
+            <td colspan="5" align="center">O</td>
           </tr>
         </table>
       </td>
@@ -128,16 +121,3 @@
   </table>
 </center>
 </body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="ZIE YAN VON DACQUEL">
-  <meta name="description" content="HTML Tables A to G layout">
-  <title>Tables A to G</title>
-</head>
-<body>
-<center>
-  <h2>Tables A to G</h2>
